--- a/MyYouTubeWeb.html
+++ b/MyYouTubeWeb.html
@@ -88,14 +88,14 @@
         <div class="video">
             <div class="thumbnailDiv">
                 <a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank">
-                    <img class="thumbnail" src="/youtube/thumbnails/thumbnail-4.webp">
+                    <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
                 </a>
                 <div class="video-time">22:09</div>
             </div>
             <div class="content-info-grid">
                 <div>
                     <a href="https://www.youtube.com/c/veritasium" target="_blank">
-                        <img class="channelPic" src="/youtube/channel-pictures/channel-4.jpeg">
+                        <img class="channelPic" src="channel-pictures/channel-4.jpeg">
                     </a>
                 </div>
                 <div>
@@ -120,14 +120,14 @@
         <div class="video">
             <div class="thumbnailDiv">
                 <a href="https://www.youtube.com/watch?v=86CQq3pKSUw" target="_blank">
-                    <img class="thumbnail" src="/youtube/thumbnails/thumbnail-5.webp">
+                    <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
                 </a>
                 <div class="video-time">4:17</div>
             </div>
             <div class="content-info-grid">
                 <div>
                     <a href="https://www.youtube.com/c/CSDojo" target="_blank">
-                        <img class="channelPic"src="/youtube/channel-pictures/channel-5.jpeg">
+                        <img class="channelPic"src="channel-pictures/channel-5.jpeg">
                     </a>
                 </div>
                 <div>
@@ -151,14 +151,14 @@
         <div class="video">
             <div class="thumbnailDiv">
                 <a href="https://www.youtube.com/watch?v=86CQq3pKSUw" target="_blank">
-                    <img class="thumbnail" src="/youtube/thumbnails/thumbnail-6.webp">
+                    <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
                 </a>
                 <div class="video-time">19:59</div>
             </div>
             <div class="content-info-grid">
                 <div>
                     <a href="https://www.youtube.com/c/CSDojo" target="_blank">
-                        <img class="channelPic"src="/youtube/channel-pictures/channel-6.jpeg">
+                        <img class="channelPic"src="channel-pictures/channel-6.jpeg">
                     </a>
                 </div>
                 <div>
@@ -180,12 +180,12 @@
         </div>
         <div class="video">
             <div class="thumbnailDiv">
-                <img class="thumbnail" src="/youtube/thumbnails/thumbnail-1.webp">
+                <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
                 <div class="video-time">14:20</div>
             </div>
             <div class="content-info-grid">
                 <div>
-                    <img class="channelPic"src="/youtube/channel-pictures//channel-1.jpeg">
+                    <img class="channelPic"src="channel-pictures//channel-1.jpeg">
                 </div>
                 <div>
                     <div>
@@ -204,12 +204,12 @@
         </div>
         <div class="video">
             <div class="thumbnailDiv">
-                <img class="thumbnail" src="/youtube/thumbnails/thumbnail-7.webp">
+                <img class="thumbnail" src="thumbnails/thumbnail-7.webp">
                 <div class="video-time">10:13</div>
             </div>
             <div class="content-info-grid">
                 <div>
-                    <img class="channelPic"src="/youtube/channel-pictures/channel-7.jpeg">
+                    <img class="channelPic"src="channel-pictures/channel-7.jpeg">
                 </div>
                 <div>
                     <div>
@@ -227,12 +227,12 @@
         </div>
         <div class="video">
             <div  class="thumbnailDiv">
-                <img class="thumbnail" src="/youtube/thumbnails/thumbnail-12.webp">
+                <img class="thumbnail" src="thumbnails/thumbnail-12.webp">
                 <div class="video-time">4:51</div>
             </div>
             <div class="content-info-grid">
                 <div>
-                    <img class="channelPic"src="/youtube/channel-pictures/channel-12.jpeg">
+                    <img class="channelPic"src="channel-pictures/channel-12.jpeg">
                 </div>
                 <div>
                     <div>
