--- a/index.html
+++ b/index.html
@@ -248,6 +248,366 @@
                 </div>
             </div>
         </div>
+        <div class="video">
+            <div class="thumbnailDiv">
+                <a href="https://www.youtube.com/watch?v=FOa55B9Ikfg&t=6s" target="_blank">
+                    <img class="thumbnail" src="thumbnails/BackToBackSWE.webp">
+                </a>
+                <div class="video-time">29:17</div>
+            </div>
+            <div class="content-info-grid">
+                <div>
+                    <a href="https://www.youtube.com/c/BackToBackSWE" target="_blank">
+                        <img class="channelPic"src="channel-pictures/BackToBackSWE.jpeg">
+                    </a>
+                </div>
+                <div>
+                    <div>
+                        <a href="https://www.youtube.com/watch?v=FOa55B9Ikfg&t=6s" target="_blank">
+                            <p class="title">Search A 2D Sorted Matrix - Fundamentals of Search Space Reduction</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.youtube.com/c/BackToBackSWE" target="_blank">
+                            <p class="channelName">BackToBackSWE</p>
+                        </a>
+                    </div>
+                    <div>
+                        <p class="timeAndViews">48.5K views &#183; 3 years ago</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="video">
+            <div class="thumbnailDiv">
+                <a href="https://www.youtube.com/watch?v=OMcxQ3IY-qc&t=16s" target="_blank">
+                    <img class="thumbnail" src="thumbnails/Luv-thumbnail.webp">
+                </a>
+                <div class="video-time">9:34</div>
+            </div>
+            <div class="content-info-grid">
+                <div>
+                    <a href="https://www.youtube.com/c/LuvIsMe" target="_blank">
+                        <img class="channelPic"src="channel-pictures/Luv-channel-picture.jpeg">
+                    </a>
+                </div>
+                <div>
+                    <div>
+                        <a href="https://www.youtube.com/watch?v=OMcxQ3IY-qc&t=16s" target="_blank">
+                            <p class="title">Ultimate Competitive Programming Course for FREE: The Beginning | EP 0</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.youtube.com/c/LuvIsMe" target="_blank">
+                            <p class="channelName">Luv</p>
+                        </a>
+                    </div>
+                    <div>
+                        <p class="timeAndViews">298.5K views &#183; 1 years ago</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="video">
+            <div class="thumbnailDiv">
+                <a href="https://www.youtube.com/watch?v=K_t-xIiNFk8" target="_blank">
+                    <img class="thumbnail" src="thumbnails/VigyanRecharge1.webp">
+                </a>
+                <div class="video-time">3:12</div>
+            </div>
+            <div class="content-info-grid">
+                <div>
+                    <a href="https://www.youtube.com/c/VigyanRecharge" target="_blank">
+                        <img class="channelPic"src="channel-pictures/VigyanRecharge.jpeg">
+                    </a>
+                </div>
+                <div>
+                    <div>
+                        <a href="https://www.youtube.com/watch?v=K_t-xIiNFk8" target="_blank">
+                            <p class="title">Working of AC generators | Generator Part-2</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.youtube.com/c/VigyanRecharge" target="_blank">
+                            <p class="channelName">Vigyan Recharge</p>
+                        </a>
+                    </div>
+                    <div>
+                        <p class="timeAndViews">10.5K views &#183; 10 days ago</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="video">
+            <div class="thumbnailDiv">
+                <a href="https://www.youtube.com/watch?v=Lr7GMr1NzV0" target="_blank">
+                    <img class="thumbnail" src="thumbnails/Dhruv1.webp">
+                </a>
+                <div class="video-time">18:47</div>
+            </div>
+            <div class="content-info-grid">
+                <div>
+                    <a href="https://www.youtube.com/c/dhruvrathee" target="_blank">
+                        <img class="channelPic"src="channel-pictures/dhruvrathee.jpeg">
+                    </a>
+                </div>
+                <div>
+                    <div>
+                        <a href="https://www.youtube.com/watch?v=Lr7GMr1NzV0" target="_blank">
+                            <p class="title">The Untold Mystery of Indus Valley Civilization | Dhruv Rathee</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.youtube.com/c/dhruvrathee" target="_blank">
+                            <p class="channelName">Dhruv Rathee</p>
+                        </a>
+                    </div>
+                    <div>
+                        <p class="timeAndViews">525.5K views &#183; 15 days ago</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="video">
+            <div class="thumbnailDiv">
+                <a href="https://www.youtube.com/watch?v=eH86GNBDuxU" target="_blank">
+                    <img class="thumbnail" src="thumbnails/AntrikshTv1.webp">
+                </a>
+                <div class="video-time">12:35</div>
+            </div>
+            <div class="content-info-grid">
+                <div>
+                    <a href="https://www.youtube.com/c/AntarikshTV" target="_blank">
+                        <img class="channelPic"src="channel-pictures/AntrikshTv.jpeg">
+                    </a>
+                </div>
+                <div>
+                    <div>
+                        <a href="https://www.youtube.com/watch?v=eH86GNBDuxU" target="_blank">
+                            <p class="title">10 Closest Stars that lies beyond our Solar system | सौरमंडल के नज़दीक कौन कौन से तारे है?</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.youtube.com/c/AntarikshTV" target="_blank">
+                            <p class="channelName">अंतरिक्ष TV</p>
+                        </a>
+                    </div>
+                    <div>
+                        <p class="timeAndViews">125.5K views &#183; 3 months ago</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="video">
+            <div class="thumbnailDiv">
+                <a href="https://www.youtube.com/watch?v=xf2DPY3vGto" target="_blank">
+                    <img class="thumbnail" src="thumbnails/Mrwhosetheboss1.webp">
+                </a>
+                <div class="video-time">20:22</div>
+            </div>
+            <div class="content-info-grid">
+                <div>
+                    <a href="https://www.youtube.com/c/Mrwhosetheboss" target="_blank">
+                        <img class="channelPic"src="channel-pictures/Mrwhosetheboss.jpeg">
+                    </a>
+                </div>
+                <div>
+                    <div>
+                        <a href="https://www.youtube.com/watch?v=xf2DPY3vGto" target="_blank">
+                            <p class="title">Android vs iPhone - Which is ACTUALLY Better? (ft MKBHD)</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.youtube.com/c/Mrwhosetheboss" target="_blank">
+                            <p class="channelName">Mrwhosetheboss</p>
+                        </a>
+                    </div>
+                    <div>
+                        <p class="timeAndViews">509.1K views &#183; 4 months ago</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="video">
+            <div class="thumbnailDiv">
+                <a href="https://www.youtube.com/watch?v=le-c8kBrYjo" target="_blank">
+                    <img class="thumbnail" src="thumbnails/AntrikshTv2.webp">
+                </a>
+                <div class="video-time">11:02</div>
+            </div>
+            <div class="content-info-grid">
+                <div>
+                    <a href="https://www.youtube.com/c/AntarikshTV" target="_blank">
+                        <img class="channelPic"src="channel-pictures/AntrikshTv.jpeg">
+                    </a>
+                </div>
+                <div>
+                    <div>
+                        <a href="https://www.youtube.com/watch?v=le-c8kBrYjo" target="_blank">
+                            <p class="title">Finally We Found What's Hidden inside the Great Attractor? क्या छिपा है Great Attractor के अंदर?</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.youtube.com/c/AntarikshTV" target="_blank">
+                            <p class="channelName">अंतरिक्ष TV</p>
+                        </a>
+                    </div>
+                    <div>
+                        <p class="timeAndViews">160.5K views &#183; 1 month ago</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="video">
+            <div class="thumbnailDiv">
+                <a href="https://www.youtube.com/watch?v=n5iHrGKhvJI" target="_blank">
+                    <img class="thumbnail" src="thumbnails/GyanTherapy1.webp">
+                </a>
+                <div class="video-time">11:37</div>
+            </div>
+            <div class="content-info-grid">
+                <div>
+                    <a href="https://www.youtube.com/c/GyanTherapy/videos" target="_blank">
+                        <img class="channelPic"src="channel-pictures/GyanTherapy.jpeg">
+                    </a>
+                </div>
+                <div>
+                    <div>
+                        <a href="https://www.youtube.com/watch?v=n5iHrGKhvJI" target="_blank">
+                            <p class="title">Mi Pad 5 Full Test with Stylus - Keyboard - Game Changer !</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.youtube.com/c/GyanTherapy/videos" target="_blank">
+                            <p class="channelName">Gyan Therapy</p>
+                        </a>
+                    </div>
+                    <div>
+                        <p class="timeAndViews">900.5K views &#183; 4 months ago</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="video">
+            <div class="thumbnailDiv">
+                <a href="https://www.youtube.com/watch?v=GqtyVD-x_jY&t=895s" target="_blank">
+                    <img class="thumbnail" src="thumbnails/LoveBabar.webp">
+                </a>
+                <div class="video-time">37:30</div>
+            </div>
+            <div class="content-info-grid">
+                <div>
+                    <a href="https://www.youtube.com/c/CodeHelpbyBabbar" target="_blank">
+                        <img class="channelPic"src="channel-pictures/LoveBabar.jpeg">
+                    </a>
+                </div>
+                <div>
+                    <div>
+                        <a href="https://www.youtube.com/watch?v=GqtyVD-x_jY&t=895s" target="_blank">
+                            <p class="title">Lecture40: Rat in a Maze Problem || C++ Placement Course 2022</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.youtube.com/c/CodeHelpbyBabbar" target="_blank">
+                            <p class="channelName">CodeHelp - by Babbar</p>
+                        </a>
+                    </div>
+                    <div>
+                        <p class="timeAndViews">54.7K views &#183; 8 months ago</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="video">
+            <div class="thumbnailDiv">
+                <a href="https://www.youtube.com/watch?v=t_cSk9tQQkk&t=6s" target="_blank">
+                    <img class="thumbnail" src="thumbnails/Dhruv3.webp">
+                </a>
+                <div class="video-time">25:07</div>
+            </div>
+            <div class="content-info-grid">
+                <div>
+                    <a href="https://www.youtube.com/c/dhruvrathee" target="_blank">
+                        <img class="channelPic"src="channel-pictures/dhruvrathee.jpeg">
+                    </a>
+                </div>
+                <div>
+                    <div>
+                        <a href="https://www.youtube.com/watch?v=t_cSk9tQQkk&t=6s" target="_blank">
+                            <p class="title">Chernobyl Nuclear Disaster | Why it happened? | Dhruv Rathee</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.youtube.com/watch?v=t_cSk9tQQkk&t=6s" target="_blank">
+                            <p class="channelName">Dhruv Rathee</p>
+                        </a>
+                    </div>
+                    <div>
+                        <p class="timeAndViews">408.8K views &#183; 2 months ago</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="video">
+            <div class="thumbnailDiv">
+                <a href="https://www.youtube.com/watch?v=0kbcbHfiSlg" target="_blank">
+                    <img class="thumbnail" src="thumbnails/AntrikshTv3.webp">
+                </a>
+                <div class="video-time">11:19</div>
+            </div>
+            <div class="content-info-grid">
+                <div>
+                    <a href="https://www.youtube.com/c/AntarikshTV" target="_blank">
+                        <img class="channelPic"src="channel-pictures/AntrikshTv.jpeg">
+                    </a>
+                </div>
+                <div>
+                    <div>
+                        <a href="https://www.youtube.com/watch?v=0kbcbHfiSlg" target="_blank">
+                            <p class="title">Finally We Found Infinite Energy to Travel in Speed of Light | आखिरकार मिल गयी Infinite Rocket fuel</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.youtube.com/c/AntarikshTV" target="_blank">
+                            <p class="channelName">अंतरिक्ष TV</p>
+                        </a>
+                    </div>
+                    <div>
+                        <p class="timeAndViews">149.1K views &#183; 2 months ago</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="video">
+            <div class="thumbnailDiv">
+                <a href="https://www.youtube.com/watch?v=mX3ZWEG9lyw&t=10s" target="_blank">
+                    <img class="thumbnail" src="thumbnails/Dhruv2.webp">
+                </a>
+                <div class="video-time">31:38</div>
+            </div>
+            <div class="content-info-grid">
+                <div>
+                    <a href="https://www.youtube.com/c/dhruvrathee" target="_blank">
+                        <img class="channelPic"src="channel-pictures/dhruvrathee.jpeg">
+                    </a>
+                </div>
+                <div>
+                    <div>
+                        <a href="https://www.youtube.com/watch?v=mX3ZWEG9lyw&t=10s" target="_blank">
+                            <p class="title">Hiroshima and Nagasaki | Why USA destroyed Japan? | WW2 | Dhruv Rathee</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="Chernobyl Nuclear Disaster | Why it happened? | Dhruv Rathee" target="_blank">
+                            <p class="channelName">Dhruv Rathee</p>
+                        </a>
+                    </div>
+                    <div>
+                        <p class="timeAndViews">399.2K views &#183; 1 month ago</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
